# Echoo

./: .gitignore  README.md
Client/: Addfriend.qml  CMakeLists.txt  ChatWidget.qml  EditProfile.qml  EditTitle.qml  EmojiPopup.qml  FrameLessWindow.qml  FriendItem.qml  Friendlist.qml  Friendnotification.qml  Friendpersonpage.qml  Friends.qml  Friendtotal.qml  GroupChat.qml  GroupItem.qml  Groupnotification.qml  Grouptotal.qml  Img.qrc  LoginForm.qml  LoginWindow.qml  Main.qml  Mainpage_titleBar.qml  MainpagetitleBar.qml  Maintotal.qml  MessageItem.qml  MessageWidget.qml  Messagetotal.qml  PersonPage.qml  RegForm.qml  SelectFriends.qml  SelectTitleBar.qml  StartWindow.qml  TitleBar.qml  ToolBar.qml  ToolBars.qml  TopBar.qml  communicator.cpp  communicator.h  databasemanager.cpp  databasemanager.h  (+10 more)
Client/CPP/: chatoperation.cpp  communicator.cpp  databasemanager.cpp  echooclient.cpp  group.cpp  logger.cpp  main.cpp  message.cpp  messageprocessor.cpp  messagesender.cpp  netizen.cpp  sessionmanager.cpp  tcpmanager.cpp  udpbroadcaster.cpp  userprofilemanager.cpp
Client/CPP_Header/: chatoperation.h  communicator.h  databasemanager.h  echooclient.h  group.h  logger.h  message.h  messageprocessor.h  messagesender.h  netizen.h  sessionmanager.h  tcpmanager.h  udpbroadcaster.h  userprofilemanager.h
Client/QML/: Addfriend.qml  ChatWidget.qml  EditProfile.qml  EmojiPopup.qml  FrameLessWindow.qml  FriendItem.qml  Friendlist.qml  Friendnotification.qml  Friendpersonpage.qml  Friends.qml  Friendtotal.qml  LoginForm.qml  MainpagetitleBar.qml  Maintotal.qml  MessageItem.qml  MessageWidget.qml  Messagetotal.qml  PersonPage.qml  RegForm.qml  StartWindow.qml  TitleBar.qml  ToolBars.qml  TopBar.qml
Client/run/media/root/yun/111/: Addfriend.qml
Server/: CMakeLists.txt  accountmanager.cpp  accountmanager.h  echoogroup.cpp  echoogroup.h  echooserver.cpp  echooserver.h  echoouser.cpp  echoouser.h  groupmanager.cpp  groupmanager.h  logger.cpp  logger.h  main.cpp  messagemanager.cpp  messagemanager.h
